force-app/main/default/objects/Quickbook_Creds__mdt/Quickbook_Creds__mdt.object-meta.xml
<CustomObject>
    <label>Quickbook Creds</label>
    <pluralLabel>Quickbook Creds</pluralLabel>
</CustomObject>