force-app/main/default/objects/Quickbook_Creds__mdt/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>