force-app/main/default/objects/Quickbook_Creds__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>