force-app/main/default/objects/Quickbook_Creds__mdt/fields/Redirect_uri__c.field-meta.xml
<CustomField>
    <fullName>Redirect_uri__c</fullName>
    <label>Redirect uri</label>
    <type>TextArea</type>
</CustomField>